Jobs section was created with ActiveAdmin integration

--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -198,4 +198,10 @@ tr:
         web: Blog
         github: GitHub kullanıcı adı
         twitter: Twitter kullanıcı adı
+      job:
+        title: Başlık
+        company: Şirket
+        description: Açıklama
+        link: Başvuru Bağlantısı
+        location: Konum
 
